<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<groupId>net.sf.ingenias</groupId>
		<artifactId>ingenias</artifactId>
		<version>1.6</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sf.ingenias</groupId>
	<artifactId>iaftesting</artifactId>
	<version>1.6</version>
	<name>ingenias editor</name>
	<description>Testing artifacts for the INGENIAS Agent Platform</description>
	<url>http://ingenias.sf.net</url>
	<packaging>pom</packaging>
	<licenses>
		<license>
			<name>The GPL V3</name>
			<url>http://www.gnu.org/copyleft/gpl.html</url>
			<distribution />
		</license>
	</licenses>
	<scm>
		<connection>scm:svn:http://svn.code.sf.net/p/ingenias/code/tags/ingenias-1.6/iaftesting</connection>
		<developerConnection>scm:svn:https://svn.code.sf.net/p/ingenias/code/tags/ingenias-1.6/iaftesting</developerConnection>
		<url>http://svn.code.sf.net/p/ingenias/code/tags/ingenias-1.6/iaftesting</url>
	</scm>

	<developers>
		<developer>
			<id>escalope</id>
			<name>Jorge Gomez-Sanz</name>
			<email>jjgomez@fdi.ucm.es</email>
		</developer>
	</developers>

<properties>
		<!-- begin: izpack configuration -->

		<izpack-standalone.version>4.3.5</izpack-standalone.version>
		<!-- end: izpack configuration -->
</properties>
    <modules>
        <module>testhelloworld</module>
	<module>testguiagent</module>
	<module>testmacrotaskpconnects</module>
	<!--module>testinteraction</module-->
	<module>testmacros</module>
	<module>testorgs</module>
	<module>testinteractionwithconditions</module>
  </modules>
<profiles>
  <profile>
    <id>release-sign-artifacts</id>
    <activation>
      <property>
        <name>performRelease</name>
        <value>true</value>
      </property>
    </activation>
    <build>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.1</version>
          <executions>
            <execution>
              <id>sign-artifacts</id>
              <phase>verify</phase>
              <goals>
                <goal>sign</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </build>
  </profile>
</profiles>
<dependencies>
	

		
	   <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.8</version>
      <scope>test</scope>
    </dependency>
		

		
		<dependency>
   <groupId>org.apache.maven.surefire</groupId>
        <artifactId>surefire-testng</artifactId>
        <version>2.14</version>
                    
                </dependency>
          				
                
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.izpack</groupId>
			<artifactId>izpack-standalone-compiler</artifactId>
			<version>${izpack-standalone.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-utils</artifactId>
			<version>1.5.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.surefire</groupId>
			<artifactId>surefire-junit47</artifactId>
			<version>2.14</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-ant-tasks</artifactId>
			<version>2.1.3</version>
		</dependency>
		<dependency>
			<groupId>ant-contrib</groupId>
			<artifactId>ant-contrib</artifactId>
			<version>1.0b3</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>ingeniasjgraphmod</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.14</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.17</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>jade</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>jadeMisc</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>jadeTools</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>httptransportjade</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>iioptransportjade</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>common-codec</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>iaf</artifactId>
			<version>1.6</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>codeuploader</artifactId>
			<version>1.6</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>htmldoc</artifactId>
			<version>1.6</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>codegen</artifactId>
			<version>1.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.ingenias</groupId>
			<artifactId>editor</artifactId>
			<version>1.6</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <optimize>true</optimize>
          <showDeprecations>true</showDeprecations>
          <encoding>ISO-8859-1</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        

        <configuration>
          <reportPlugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-report-plugin</artifactId>
              <version>${maven.surefire.report.plugin.version}</version>
              <configuration>
                <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                <aggregate>true</aggregate>
              </configuration>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jxr-plugin</artifactId>
              <version>2.2</version>
              <configuration>
                <aggregate>true</aggregate>
              </configuration>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-pmd-plugin</artifactId>
              <version>2.5</version>
              <configuration>
                <linkXref>true</linkXref>
                <sourceEncoding>utf-8</sourceEncoding>
                <minimumTokens>100</minimumTokens>
                <targetJdk>1.6</targetJdk>
                <aggregate>true</aggregate>
              </configuration>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-project-info-reports-plugin</artifactId>
              <version>2.3.1</version>
            </plugin>

            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>taglist-maven-plugin</artifactId>
              <version>2.4</version>
              <configuration>
                <tags>
                  <tag>TODO</tag>
                  <tag>@todo</tag>
                  <tag>@deprecated</tag>
                  <tag>FIXME</tag>
                </tags>
              </configuration>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>2.7</version>
              <configuration>
                <minmemory>512m</minmemory>
                <maxmemory>1g</maxmemory>
                <linksource>true</linksource>
              </configuration>
              <reportSets>
                <reportSet>
                  <reports>
                    <report>aggregate</report>
                    <report>test-aggregate</report>
                    <report>fix</report>
                    <report>test-fix</report>
                  </reports>
                </reportSet>
              </reportSets>
            </plugin>

            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>findbugs-maven-plugin</artifactId>
              <version>2.3.1</version>
            </plugin>

            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>cobertura-maven-plugin</artifactId>
              <version>2.4</version>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-checkstyle-plugin</artifactId>
              <version>2.6</version>
            </plugin>

            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>l10n-maven-plugin</artifactId>
              <version>1.0-alpha-2</version>
              <configuration>
                <locales>
                  <locale>en</locale>
                  <locale>de</locale>
                  <locale>fr</locale>
                </locales>
                <aggregate>true</aggregate>
              </configuration>
            </plugin>
          </reportPlugins>
        </configuration>
      </plugin>
    </plugins>
</build>



</project>
